[gd_scene load_steps=8 format=3 uid="uid://bkfqmhfp1dm72"]

[ext_resource type="Script" path="res://scripts/spell_scenes/magic_bolt.gd" id="1_gc0vs"]
[ext_resource type="Script" path="res://scripts/component/hurtbox.gd" id="1_nufxx"]
[ext_resource type="Texture2D" uid="uid://cgku34nmatr5r" path="res://assets/icon.svg" id="2_f4gf4"]
[ext_resource type="Script" path="res://scripts/component/simple_move_component.gd" id="3_18ugy"]

[sub_resource type="Gradient" id="Gradient_k66b0"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_onfko"]
radius = 2.5

[sub_resource type="Gradient" id="Gradient_abhkl"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="MagicBolt" type="Node2D"]
script = ExtResource("1_gc0vs")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ActiveRoot" type="Node2D" parent="."]

[node name="TrailParticle" type="CPUParticles2D" parent="ActiveRoot"]
rotation = 3.14159
amount = 16
randomness = 1.0
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.5
direction = Vector2(0, 1)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 25.0
damping_min = 5.0
damping_max = 15.0
color_initial_ramp = SubResource("Gradient_k66b0")

[node name="Hurtbox" type="Area2D" parent="ActiveRoot"]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_nufxx")
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveRoot/Hurtbox"]
shape = SubResource("CircleShape2D_onfko")

[node name="Sprite2D" type="Sprite2D" parent="ActiveRoot"]
rotation = 3.14159
scale = Vector2(0.03125, 0.03125)
texture = ExtResource("2_f4gf4")

[node name="SimpleMoveComponent" type="Node" parent="ActiveRoot" node_paths=PackedStringArray("actor")]
script = ExtResource("3_18ugy")
actor = NodePath("../..")
direction = Vector2(0, 1)
speed = 25.0

[node name="ExplosionParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
damping_max = 5.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.25
scale_amount_max = 0.75
color_initial_ramp = SubResource("Gradient_abhkl")

[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
[connection signal="hit" from="ActiveRoot/Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="finished" from="ExplosionParticle" to="." method="_on_explosion_particle_finished"]
